--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.10",
@@ -44,7 +44,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "text-encoding": "^0.7.0",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.7",
+    "expo-secure-store": "~14.2.3",
+    "expo-clipboard": "~7.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
