--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "text-encoding": "^0.7.0",
     "zustand": "^5.0.7",
     "expo-secure-store": "~14.2.3",
-    "expo-clipboard": "~7.1.5"
+    "expo-clipboard": "~7.1.5",
+    "expo-camera": "~16.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
